# incawrapper

./: .gitignore  .readthedocs.yml  README.md  dev_reimport.py  env.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.circleci/: _config.yml  config.yml
.github/workflows/: python-package.yml  python-publish.yml
BFAIR/atom_mapping/: __init__.py  atom_mapping.py
BFAIR/exometabolomics/: __init__.py
BFAIR/parsers/: Data_Stage02_isotopomer_Parser_CfB.py  __init__.py  (+1 more)
docs/: Low_level_api.ipynb  atom_mapping_example_notebook.ipynb  conf.py  incawrapper_and_the_incagui.rst  index.rst  input_data.ipynb  install.rst  monte_carlo_sampling.ipynb  multiple_experiments.ipynb  options.ipynb  quick_start.ipynb  requirements.txt
incawrapper/: __init__.py
manual_tests/: c_necator_simulated_data.ipynb  manual_inca_execution_test.py
tests/: _test_INCA_input_parser.py  _test_INCA_reimport.py  _test_INCA_script_generator.py  _test_MFA_sampling.py  _test_MFA_utils.py  _test_atom_mapping.py  _test_exometabolomics.py  conftest.py  test_INCAFitData.py  test_INCAModel.py  test_INCAMonteCarloResults.py  test_INCAResults.py  test_INCAScript.py  test_INCAScript_writing.py  test_INCA_input_parser.py  test_INCA_model.py  test_INCA_results.py  test_INCA_script.py  test_INCA_script_generator.py  test_INCA_script_generator_simple_model.py  test_INCA_script_writing.py  test_MFA_visualization.py  test_data_import_parsers.py  test_dataschemas.py  test_diagnostics.py  test_exometabolomics.py  test_utils_chemical_formula.py  test_utils_merge_reversible_reactions.py
(+314 files in other folders)
