[metadata]
name = incawrapper
version = attr: incawrapper.__version__
author = AutoFlow, Matthias Mattonovish and Viktor Hesselberg-Thomsen
author_email = vikhes@dtu.dk
description = General Repository for Omics Data Handling tools
long_description = file: README.md
long_description_content_type = text/markdown
url = 
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pandas
    numpy
    matplotlib
    pandera
    scipy
    requests
    altair

[options.extras_require]
develop =
    pytest
    ipykernel
    python-dotenv
    openpyxl
    sphinx==3.4.3
    numpydoc>=1.1
    nb2plots>=0.6
    jinja2<3.1.0
    nbsphinx==0.9.1
    sphinx-material
    sphinx-autoapi
matlab = 
    matlabengine
atommapping = 
    cobra
    RDKit
    pymatgen
    openjdk

[options.packages.find]
exclude =
    tests
    tests.*
